[Mac][Material Design] Fix ManagePasswordsDecoration unit tests

Under Material Design the ManagePasswordsDecoration unit tests broke
because of comparing the old PNG icons to the new vector icons, and
because of a NULL pointer dereference.

R=avi@chromium.org
BUG=609578

Review-Url: https://codereview.chromium.org/1959473002
Cr-Commit-Position: refs/heads/master@{#391930}

Former-commit-id: 8ef553f7f2825bdeb386996fa105193255b64271